force-app/main/default/objects/Membro_do_evento_simples__c/Membro_do_evento_simples__c.object-meta.xml
<CustomObject>
    <label>Membro do evento simples</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Nome de Membro do evento simples</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros do evento simples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>