force-app/main/default/objects/Membro_do_evento_simples__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <label>Idade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>