force-app/main/default/objects/Membro_do_evento_simples__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <label>Nome</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>