force-app/main/default/objects/Membro_do_evento_simples__c/fields/Reserva_de_Sala__c.field-meta.xml
<CustomField>
    <fullName>Reserva_de_Sala__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reserva de Sala</label>
    <referenceTo>Reserva_de_Sala__c</referenceTo>
    <relationshipLabel>Membros do evento simples</relationshipLabel>
    <relationshipName>Membros_do_evento_simples</relationshipName>
    <type>Lookup</type>
</CustomField>